Html ile ilgili güncelleme

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <!--Sevdiğim diziler bölümü-->
     <h3>Sevdiğim Diziler</h3>
     <p>Netflix hepsini severim.</p>
+    <ul>
+        <li>Kara yılan</li>
+        <li>Memoli</li>
+        <li>Darlandım</li>
+    </ul>
     
 </body>
 </html>
