--- a/index.html
+++ b/index.html
@@ -16,10 +16,25 @@
     <h3>Sevdiğim Diziler</h3>
     <p>Netflix hepsini severim.</p>
     <ul>
-        <li>Kara yılan</li>
+        <h3>Dizi</h3>
+        <li><a href="#">Kara yılan</a></li>
         <li>Memoli</li>
         <li>Darlandım</li>
     </ul>
-    
+    <ul>
+        <h3>Film</h3>
+        <li><a href="#">Aklıma gelmiyo</a></li>
+        <li>Aklıma gelmiyo</li>
+        <li>Aklıma gelmiyo</li>
+    </ul>
+    <ul>
+        <h3>Kitap</h3>
+        <li>Aklıma gelmiyo</li>
+        <li>Aklıma gelmiyo</li>
+        <li>Aklıma gelmiyo</li>
+    </ul>
+
+<br>
+<br>
 </body>
 </html>
