--- a/odev2.html
+++ b/odev2.html
@@ -34,7 +34,10 @@
         <li>Aklıma gelmiyo</li>
     </ul>
 
-    <br>
+    <h2>Sevdiğim Diziler</h2>
+    <h3>Star Trek: The Next Generation</h3>
+
+    <img src="img/startrek.webp" alt="">
 
 
 </body>
